--- a/index.html
+++ b/index.html
@@ -57,8 +57,21 @@
       <a href="download.html">Download</a>
       <a href="langganan.html">Langganan</a>
     </div>
-    <div class="search-box">
-      <input type="text" placeholder="Cari film..." />
+    <header>
+  <h1>VYNIX</h1>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="favorit.html">Favorit</a>
+    <a href="notifikasi.html">Notifikasi</a>
+    <a href="nonton.html">Nonton</a>
+    <a href="profil.html">Profil</a>
+    <a href="pengaturan.html">Pengaturan</a>
+    <a href="donasi.html">Donasi</a>
+  </nav>
+  <div class="search-box">
+    <input type="text" placeholder="Cari film...">
+  </div>
+</header>
     </div>
   </footer>
 </body>
