--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 </head>
 <body>
   <header>
-    <div class="logo">VYNIX</div>
+    <h1>VYNIX</h1>
+    <div class="search-box">
+      <input type="text" placeholder="Cari film..." />
+    </div>
     <nav>
-      <a href="index.html" class="active">Home</a>
+      <a href="index.html">Home</a>
       <a href="favorit.html">Favorit</a>
       <a href="notifikasi.html">Notifikasi</a>
       <a href="nonton.html">Nonton</a>
@@ -21,10 +24,12 @@
   </header>
 
   <main>
-    <section class="hero">
-      <h2>Trending Film AI Minggu Ini</h2>
-      <div class="trending">
-        <img src="poster1.jpg" alt="Film Trending" class="poster-big" />
+    <section class="trending">
+      <h2>Trending Minggu Ini</h2>
+      <div class="trending-scroll">
+        <img src="poster1.jpg" alt="Film 1" />
+        <img src="poster2.jpg" alt="Film 2" />
+        <!-- Tambah film -->
       </div>
     </section>
 
@@ -35,17 +40,16 @@
         <a href="genre.html">Drama</a>
         <a href="genre.html">Fantasi</a>
         <a href="genre.html">Horor</a>
-        <a href="genre.html">Romantis</a>
-        <a href="genre.html">Sci-Fi</a>
+        <!-- Tambah genre -->
       </div>
     </section>
 
     <section class="lainnya">
       <h3>Rekomendasi Lainnya</h3>
-      <div class="film-list">
-        <img src="film1.jpg" alt="Film 1" class="film-thumbnail"/>
-        <img src="film2.jpg" alt="Film 2" class="film-thumbnail"/>
-        <img src="film3.jpg" alt="Film 3" class="film-thumbnail"/>
+      <div class="lainnya-scroll">
+        <img src="film1.jpg" alt="Rek 1" />
+        <img src="film2.jpg" alt="Rek 2" />
+        <!-- Tambah rekomendasi -->
       </div>
     </section>
   </main>
@@ -56,22 +60,6 @@
       <a href="tentang.html">Tentang VYNIX</a>
       <a href="download.html">Download</a>
       <a href="langganan.html">Langganan</a>
-    </div>
-    <header>
-  <h1>VYNIX</h1>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="favorit.html">Favorit</a>
-    <a href="notifikasi.html">Notifikasi</a>
-    <a href="nonton.html">Nonton</a>
-    <a href="profil.html">Profil</a>
-    <a href="pengaturan.html">Pengaturan</a>
-    <a href="donasi.html">Donasi</a>
-  </nav>
-  <div class="search-box">
-    <input type="text" placeholder="Cari film...">
-  </div>
-</header>
     </div>
   </footer>
 </body>
