--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
-<!DOCTYPE html>
-<html lang="id">
+<!DOCTYPE html><html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>VYNIX - Home</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>VYNIX</h1>
+    <h1 class="logo">VYNIX</h1>
     <div class="search-box">
-      <input type="text" placeholder="Cari film..." />
+      <input type="text" placeholder="Cari film...">
     </div>
     <nav>
       <a href="index.html">Home</a>
@@ -21,46 +20,46 @@
       <a href="pengaturan.html">Pengaturan</a>
       <a href="donasi.html">Donasi</a>
     </nav>
-  </header>
-
-  <main>
-    <section class="trending">
-      <h2>Trending Minggu Ini</h2>
-      <div class="trending-scroll">
-        <img src="poster1.jpg" alt="Film 1" />
-        <img src="poster2.jpg" alt="Film 2" />
-        <!-- Tambah film -->
+  </header>  <main>
+    <section class="hero">
+      <h2>Trending Film AI Minggu Ini</h2>
+      <div class="trending">
+        <!-- Poster besar -->
+        <img src="poster1.jpg" alt="Trending 1" class="poster-besar">
+        <p class="deskripsi">Film AI paling keren minggu ini. <a href="nonton.html" class="btn-nonton">Nonton</a></p>
       </div>
-    </section>
+    </section><section class="genre">
+  <h3>Genre</h3>
+  <div class="genre-scroll">
+    <a href="genre.html">Aksi</a>
+    <a href="genre.html">Drama</a>
+    <a href="genre.html">Fantasi</a>
+    <a href="genre.html">Horor</a>
+    <a href="genre.html">Komedi</a>
+    <a href="genre.html">Sci-Fi</a>
+    <a href="genre.html">Thriller</a>
+    <a href="genre.html">Dokumenter</a>
+  </div>
+</section>
 
-    <section class="genre">
-      <h3>Genre</h3>
-      <div class="genre-scroll">
-        <a href="genre.html">Aksi</a>
-        <a href="genre.html">Drama</a>
-        <a href="genre.html">Fantasi</a>
-        <a href="genre.html">Horor</a>
-        <!-- Tambah genre -->
-      </div>
-    </section>
+<section class="lainnya">
+  <h3>Rekomendasi Lainnya</h3>
+  <div class="film-scroll">
+    <!-- Film kecil -->
+    <div class="film-item"><img src="f1.jpg"><p>Judul 1</p></div>
+    <div class="film-item"><img src="f2.jpg"><p>Judul 2</p></div>
+    <div class="film-item"><img src="f3.jpg"><p>Judul 3</p></div>
+    <div class="film-item"><img src="f4.jpg"><p>Judul 4</p></div>
+  </div>
+</section>
 
-    <section class="lainnya">
-      <h3>Rekomendasi Lainnya</h3>
-      <div class="lainnya-scroll">
-        <img src="film1.jpg" alt="Rek 1" />
-        <img src="film2.jpg" alt="Rek 2" />
-        <!-- Tambah rekomendasi -->
-      </div>
-    </section>
-  </main>
-
-  <footer>
+  </main>  <footer>
     <div class="footer-menu">
-      <a href="donasi.html">Donasi</a>
       <a href="tentang.html">Tentang VYNIX</a>
-      <a href="download.html">Download</a>
       <a href="langganan.html">Langganan</a>
+      <a href="download.html">Download</a>
     </div>
+    <p class="disclaimer">Disclaimer: Jika terdapat iklan, itu untuk membantu perkembangan VYNIX.</p>
   </footer>
 </body>
 </html>
